# IMPlus

./: .gitignore  GEMINI.md  LICENSE  README.md  TODO.md  build.sh  check_json.py  settings.gradle.kts
app/: build.gradle.kts
app/config/detekt/: detekt.yml
app/src/androidTest/java/com/pinyin/: PinyinImeTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/i18n/: en.json  zh.json
app/src/main/assets/languages/en/: config.json  en_US.dict  mobile_layout.json  pc_layout.json
app/src/main/assets/languages/zh/: config.json  mobile_layout.json  (+1 more)
app/src/main/assets/layouts/: no_candidate_layout.json  pc_layout.json  symbols.json
app/src/main/assets/rime/: default.yaml  luna_pinyin.schema.yaml
app/src/main/assets/themes/: dark.json  light.json
app/src/main/cpp/: CMakeLists.txt  pinyin_jni.cpp
app/src/main/cpp/googlepinyin/share/: userdict.cpp
app/src/main/res/drawable/: bg_circle_button.xml  ic_assignment.xml  ic_close.xml  ic_content_copy.xml  ic_content_paste.xml  ic_keyboard_arrow_down.xml  ic_keyboard_arrow_left.xml  ic_keyboard_arrow_right.xml  ic_keyboard_arrow_up.xml  ic_select_all.xml  ic_settings.xml  ic_text_format.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml  input_view.xml  keyboard_base.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: method.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: aosp_to_implus.py  check_json.py
(+40 files in other folders)
